# sl1m

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  README.txt  constants_and_tools.py  constants_and_tools_daeun.py  fix_sparsity.py  package.xml  planner.py  planner_l1.py  planner_l1_generic.py  planner_l1_generic_equalities_as_ineq.py  planner_mixed_integer.py  planner_old.py  problem_definition.py  problem_definition_daeun.py  qp.py  sl1m_to_mcapi.py  surfaces_from_planning.py  test.py
data/: contacts_flat.txt  contacts_plateformes.txt  contacts_plateformes_dic.txt
planner_scenarios/: anymal_constants.py  anymal_container_floor.py  anymal_flat_ground.py  anymal_palet.py  anymal_plint.py  anymal_race_slopes_container.py  anymal_stairs.py  bauzil.sh  complex.py  complex.sh  complex1.py  escaliers.py  flat_ground.py  lp_complex.py  lp_complex1.py  lp_stair_bauzil.py  lp_stair_bauzil_10.py  lp_stair_bauzil_hrp2_path.py  lp_stair_bauzil_hrp2_path_10.py  random_scene_gen.py  run.sh  stairs_10cm.py  state_methods.py
planner_scenarios/talos/: complex1.py  complex1_daeun.py  constraints.py  lp_complex1.py  lp_complex1_daeun.py  lp_complex1_path.py  lp_complex1_path_daeun.py  lp_ramp_path.py  lp_rubbles_path.py  lp_slalom_debris.py  lp_slalom_debris_path.py  maze.py  ramp_noGuide.py  rubble_stairs.py  rubbles.py  slalom_debris.py
rbprm/: constants_and_tools.py  narrow_convex_hull.py  surfaces_from_path.py  surfaces_from_planning.py
sandbox/: alternate_descent.py  antecedent_capturability.py  constants.py  cwc_qhull.py  equality.py  mpcroc_symbolic.py  planner_l1.py  qp.py  run.py  standard_croc.py  symbolic.py  test_bend.py  test_l1_comb.py  test_l1_comb_ineq.py  test_l1_high_dim_qcqp.py  test_l1_ineq.py  test_l1_qcqp.py
sandbox/converged/: 1_problem  1_surf  2_scene  2_surf  4_problem  4_scene  4_surf  5_scene  7_scene  7_surf  8_problem  8_scene
sandbox/inconsistent_constraints/: 10_problem  10_scene  12_surf  14_surf  15_scene  15_surf  1_scene  1_surf  2_problem  2_scene  3_surf  4_scene  4_surf  5_problem  6_scene  7_scene
sandbox/inconsistent_new/: 1_indices  1_pbComb  1_problem  1_scene  1_surf  2_problem  2_scene  2_surf  3_problem  3_scene  3_surf  4_problem  4_scene  4_surfaces  5_problem  5_scene  5_surf  6_problem  6_scene  6_surfaces  7_problem  7_scene  7_surf  8_problem  8_scene  8_surfaces
sandbox/pb_files/converged/: 1_scene  2_problem  3_problem  3_scene  3_surf  5_problem  5_surf  6_problem  6_scene  6_surf  7_problem  8_surf
sandbox/pb_files/inconsistent_constraints/: 10_surf  11_problem  11_scene  11_surf  12_problem  12_scene  13_problem  13_scene  13_surf  14_problem  14_scene  15_problem  1_problem  2_surf  3_problem  3_scene  4_problem  5_scene  5_surf  6_problem  6_surf  7_problem  7_surf  8_problem  8_scene  8_surf  9_problem  9_scene  9_surf
sandbox/pb_files/problem_too_big/: 1_scene  1_surf
sandbox/pb_files/unfeasible/: 2_problem  2_scene  3_scene  3_surf  5_problem  5_surf
sandbox/problem_too_big/: 1_problem
sandbox/unfeasible/: 1_problem  1_scene  1_surf  2_surf  3_problem  4_problem  4_scene  4_surf  5_scene
sl1m/: anymal_trot.py  constants_and_tools.py  constraints.py  constraints_biped.py  constraints_gait.py  fix_sparsity.py  generic_solver.py  planner.py  planner_biped.py  planner_generic.py  planner_generic_gait.py  planner_l1.py  problem_data.py  problem_definition.py  problem_definition_gait.py  qp.py  sl1m_to_mcapi.py  solver.py
sl1m/planner_scenarios/: bauzil_10.sh  complex.py  complex1.py  escaliers.py  flat_ground.py  lp_complex_path.py  lp_stair_bauzil_hrp2_path.py  rund.sh  stairs_10cm.py
sl1m/planner_scenarios/hrp2/: complex.py  problem_definition_hrp2.py
sl1m/planner_scenarios/hrp2/path_files/: lp_complex.py  lp_complex1.py  lp_complex_path copy.py  lp_complex_path.py  lp_stair_bauzil.py  lp_stair_bauzil_10.py  lp_stair_bauzil_hrp2_path.py  lp_stair_bauzil_hrp2_path_10.py
sl1m/planner_scenarios/talos/: complex.py  complex1.py  lp_complex1.py  lp_complex1_path.py  lp_ramp_path.py  lp_rubbles_path.py  lp_slalom_debris.py  lp_slalom_debris_path.py  lp_stairs_path.py  maze.py  problem_definition_talos.py  ramp.py  ramp_noGuide.py  rubble_stairs.py  rubbles.py  slalom_debris.py  stairs.py
sl1m/planner_scenarios/talos/broken/: lp_slalom_debris.py  lp_slalom_debris_path.py  slalom_debris.py
sl1m/planner_scenarios/talos/path_files/: lp_complex_path.py  lp_ramp_path.py  lp_rubbles_path.py  lp_stairs_path.py
sl1m/rbprm/: constants_and_tools.py  narrow_convex_hull.py  surfaces_from_planning.py
sl1m/stand_alone_scenarios/: anymal_inclined_surfaces.py  anymal_stairs.py  anymal_trot.py  complex.py  constraints.py  data.pickle  escaliers.py  hrp2_complex.py  hrp2_stairs.py  problem_definition_hrp2.py  problem_definition_talos.py  solo_stairs.py  solo_trot.py  talos_ramp.py  talos_rubble_stairs.py
sl1m/stand_alone_scenarios/surfaces/: complex_surfaces.py  flat_ground.py  inclined_surfaces.py  ramp_surfaces.py  rubble_stair_surfaces.py  stair_surfaces.py
sl1m/tools/: geom_utils.py  heightmap_generator.py  heightmap_tools.py  obj_to_constraints.py  plot_plytopes.py  plot_tools.py  plot_utils.py  transformations.py
stand_alone_scenarios/: complex.py  constraints_anymal.py  escaliers.py
stand_alone_scenarios/anymal/: complex.py  flat_ground.py  palet.py  plinth.py  plinth_surfaces.py  race_slopes_container.py  stairs.py
tools/: geom_utils.py  obj_to_constraints.py  plot_plytopes.py  plot_utils.py  polytope_conversion_utils.py  transformations.py
