<?xml version='1.0'?>
<package format='3'>
    <name>sl1m</name>
    <version>0.1.1</version>
    <description>Implementation of the sl1m solver for multi contact planning</description>

    <maintainer email='guilhem.saurel@laas.fr'>Guilhem Saurel</maintainer>
    <license>BSD</license>

    <author>Steve Tonneau</author>

    <!-- The following tags are recommended by REP-136 -->
    <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
    <buildtool_depend>cmake</buildtool_depend>
    <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
    <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
    <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
    <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
    <depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</depend>
    <depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</depend>
    <depend>python3-cvxpy-pip</depend>
    <depend>python3-glpk-pip</depend>
    <depend>python3-gurobipy-pip</depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
